--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Lint
         run: poetry run flake8 src tests
       - name: Test
-        run: poetry run pytest --maxfail=1 --disable-warnings -q
+        run: PYTHONPATH=. poetry run pytest --maxfail=1 --disable-warnings -q
       - name: Build Docker Image
         run: docker build . --file Dockerfile --tag pdv:ci
