--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "pdv-vault"
 version = "0.1.0"
 description = "Personal Data Vault service"
 authors = ["PDV Team <pdv@example.com>"]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -12,6 +13,7 @@ uvicorn = "^0.29"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4"
 flake8 = "^6.0"
+httpx = "^0.27"
 
 [build-system]
 requires = ["poetry>=1.3"]
