--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ package-mode = false
 python = "^3.10"
 fastapi = "^0.110"
 uvicorn = "^0.29"
+SQLAlchemy = "^2.0"
+alembic = "^1.13"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4"
