--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ fastapi = "^0.110"
 uvicorn = "^0.29"
 SQLAlchemy = "^2.0"
 alembic = "^1.13"
+cryptography = "^42.0"
+hvac = "^1.3"
+boto3 = "^1.34"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4"
